--- a/templates/ArjunVaas/user-profile-edit.html
+++ b/templates/ArjunVaas/user-profile-edit.html
@@ -52,6 +52,11 @@
                     </button>
                     {% endif %}
                 </form>
+            <div class="aksh" style="margin-top: 2rem">
+                            <a href="https://youtube.com" style="display: inline;">
+                                <h5 class="tetExplm">See examples how to select skin color.</h5>
+                            </a>
+                        </div>
             </div>
         </div>
         <footer>
