--- a/templates/ArjunVaas/main.html
+++ b/templates/ArjunVaas/main.html
@@ -249,7 +249,7 @@ span {
     <img src="{% static 'ArjunVaas/img/menu_icons/logo.png' %}"
          style="width: 150px; display: block; margin-left: auto; margin-right: auto;">
     <img src="{% static 'ArjunVaas/img/menu_icons/MenuImage.png' %}" style="height: 250px;">
-    <a href="{% static '/uploads/docs/about_us.pdf' %}" target="_blank"
+    <a href="{% static 'ArjunVaas/img/about_us.jpg' %}"
     style="float: left; margin-left: 0; padding-left: 0;"><img
         src="{% static 'ArjunVaas/img/menu_icons/about.png' %}" style="float: left; width: 50%;"></a>
     <a href="{% static '/uploads/docs/terms.pdf' %}" target="_blank"
@@ -259,7 +259,7 @@ span {
     <a href="{% static '/uploads/docs/policy.pdf' %}" target="_blank"
     style="float: left; margin-left: 0; padding-left: 0;"><img
         src="{% static 'ArjunVaas/img/menu_icons/policy.png' %}" style="float: left; width: 50%;"></a>
-    <a href="{% static '/uploads/docs/contact.pdf' %}" target="_blank"
+    <a href="{% static 'ArjunVaas/img/contact.jpg' %}"
     style="float: left; margin-left: 0; padding-left: 0;"><img
         src="{% static 'ArjunVaas/img/menu_icons/contact.png' %}" style="float: left; width: 50%;"></a>
     <!-- <a href="/user-info" style="float: left; margin-left: 0; padding-left: 0;"><img
