--- a/templates/ArjunVaas/home.html
+++ b/templates/ArjunVaas/home.html
@@ -95,7 +95,7 @@ footer span {
                     <h3 class="text-center">
                         Select your gender
                     </h3>
-                    <form method="post" enctype="multipart/form-data" action="user-profile-edit">
+                    <form id="profile-edit-form" method="post" enctype="multipart/form-data" action="user-profile-edit">
                         {% csrf_token %}
                         <div class="mb-3 m-auto">
                             <section class="my-section"
@@ -254,7 +254,7 @@ footer span {
                             {% endif %}
                         </div>
                         <div class="aksh">
-                            <a href="exmp.html" style="display: inline;">
+                            <a href="https://youtube.com" style="display: inline;">
                                 <h5 class="tetExplm"> See examples how to upload Images.</h5>
                             </a>
                         </div>
@@ -263,6 +263,13 @@ footer span {
             </div>
         </div>
     </main>
+  <div id="myModal" style="display: none; position: fixed; z-index: 1; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0, 0, 0, 0.5);">
+  <!-- This is the content of the modal. -->
+  <div style="background-color: white; margin: 15% auto; padding: 20px; width: 75%; border: 1px solid #888;">
+    <h4 style="color: black;">Image too large.</h4>
+    <p style="color: black;">Please upload a smaller image.</p>
+  </div>
+</div>
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
          aria-hidden="true">
@@ -339,6 +346,32 @@ footer span {
         //   console.log(form_data.get('gender'));
         // })
 
+        document.getElementById("profile-edit-form").addEventListener("submit", function(event) {
+        event.preventDefault(); // stop form from submitting normally
+
+        var formData = new FormData(this);
+
+        fetch(this.action, {
+          method: 'POST',
+          body: formData
+        })
+        .then(response => {
+          if (response.status === 400) {
+                  var modal = document.getElementById("myModal");
+        modal.style.display = "block";
+
+        // After 2 seconds, hide the modal.
+        setTimeout(function() {
+          modal.style.display = "none";
+        }, 2000);
+                } else {
+                  // handle response here if you wish
+                  // or reload the page after successful form submit
+                  event.target.submit();
+                }
+              })
+              .catch(error => console.error('Error:', error));
+            });
         function selected_gender_update(val) {
             document.getElementById('selected_gender').value = val;
         }
