--- a/templates/ArjunVaas/user-profile-edit.html
+++ b/templates/ArjunVaas/user-profile-edit.html
@@ -53,7 +53,7 @@
                     {% endif %}
                 </form>
             <div class="aksh" style="margin-top: 2rem">
-                            <a href="https://youtube.com" style="display: inline;">
+                            <a href="https://www.youtube.com/channel/UC8ghyFMAlJpyrF3Tic3Sukg" style="display: inline;">
                                 <h5 class="tetExplm">See examples how to select skin color.</h5>
                             </a>
                         </div>
