--- a/templates/ArjunVaas/home.html
+++ b/templates/ArjunVaas/home.html
@@ -254,7 +254,7 @@ footer span {
                             {% endif %}
                         </div>
                         <div class="aksh">
-                            <a href="https://youtube.com" style="display: inline;">
+                            <a href="https://www.youtube.com/channel/UC8ghyFMAlJpyrF3Tic3Sukg" style="display: inline;">
                                 <h5 class="tetExplm"> See examples how to upload Images.</h5>
                             </a>
                         </div>
