--- a/templates/ArjunVaas/add_image.html
+++ b/templates/ArjunVaas/add_image.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Image Upload</title>
+    
+    <!-- Bootstrap 4 CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
 <body>
 
-<h2>Image Upload</h2>
-<p>Please select an image to upload:</p>
-
-<form action="/upload_image/" method="post" enctype="multipart/form-data">
-  {% csrf_token %}
-  <input type="file" id="image" name="image" accept="image/*">
-  <input type="submit" value="Upload Image" name="submit">
-</form>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <h2 class="text-center">Image Upload</h2>
+            <form action="/upload_image/" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="image">Please select an image to upload:</label>
+                    <input type="file" id="image" name="image" class="form-control-file" accept="image/*">
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Upload Image" name="submit" class="btn btn-primary">
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
