--- a/templates/ArjunVaas/add_image.html
+++ b/templates/ArjunVaas/add_image.html
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <h2 class="text-center">Image Upload</h2>
-            <form action="/upload_image/" method="post" enctype="multipart/form-data">
+            <form action="" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="form-group">
                     <label for="image">Please select an image to upload:</label>
