--- a/templates/ArjunVaas/index.html
+++ b/templates/ArjunVaas/index.html
@@ -60,7 +60,7 @@
                 <img class="header-image {% if request.path == '/tryons' %} active {% endif %}" src="{% static 'ArjunVaas/img/new_home_icons/like.png' %}" style="width: 32px;float: left;padding: 2%;margin-right: 15%;">
                 <span style="color: black;">Wish</span>
             </a> -->
-            <a href="/user-info">
+            <a href="/oauth">
                 <img class="header-image {% if request.path == '/tryons' %} active {% endif %}" src="{% static 'ArjunVaas/img/new_home_icons/profile.png' %}" style="width: 32px;float: left;padding: 2%;margin:0 15% 0 8%;">
                 <span style="color: black;">Profile</span>
             </a>
