--- a/templates/ArjunVaas/user-profile-edit.html
+++ b/templates/ArjunVaas/user-profile-edit.html
@@ -23,12 +23,21 @@
                         <hr class="hr-2">
                     </div>
                 </div>
-                <div id="profile_image" class="col-12" style="padding: 10;">
-                    <div class="rounded shadow border border-dark mx-auto mt-3 d-flex align-items-center justify-content-center">
-                        <img src="/{{ selected_profile.picture }}" class="rounded shadow border border-dark mx-auto"
-                             style="width: 100%"/>
-                    </div>
-                </div>
+              <div class="thumbnail">
+{#                <div class="preview"></div>#}
+                  <div id="profile_image" class="col-12" style="padding: 10px;">
+                      <div class="rounded shadow border border-dark mx-auto mt-3 d-flex align-items-center justify-content-center">
+                          <img id="profile-picture" src="/{{ selected_profile.picture }}" class="rounded shadow border border-dark mx-auto"
+                               style="width: 100%"/>
+                      </div>
+                  </div>
+              </div>
+{#              <div class="result">#}
+{#                <span>HEX: #22142b</span>#}
+{#                <span>RGB: rgb(34,20,43)</span>#}
+{#              </div>#}
+
+              <canvas id="cs"></canvas>
             </div>
             <!-- Fourth row -->
             <div class="my-margin row mt-5 d-flex flex-column align-items-center justify-content-center">
@@ -88,6 +97,111 @@
         function update_continue() {
             document.getElementById('continue_button').disabled = false
         }
+        var img = _('.thumbnail img'),
+        canvas = _('#cs'),
+        result = _('.result'),
+        preview = _('.preview'),x = '',y = '';
+        
+        
+        
+        // click function
+        img.addEventListener('click', function(e){
+          // chrome
+          if(e.offsetX) {
+            x = e.offsetX;
+            y = e.offsetY;
+          }
+          // firefox
+          else if(e.layerX) {
+            x = e.layerX;
+            y = e.layerY;
+          }
+          useCanvas(canvas,img,function(){
+            // get image data
+            var p = canvas.getContext('2d')
+            .getImageData(x, y, 1, 1).data;
+            // show info
+            {#result.innerHTML = '<span>HEX: '+rgbToHex(p[0],p[1],p[2])+'</span>'+#}
+            {# '<span>RGB:  rgb('+#}
+            {#  p[0]+','+#}
+            {#  p[1]+','+#}
+            {#  p[2]+')</span>';#}
+        
+            // add background in body
+            {#document.body.style.background =rgbToHex(p[0],p[1],p[2]);#}
+            document.getElementById("colorpicker").setAttribute("value", rgbToHex(p[0],p[1],p[2]))
+            document.getElementById('continue_button').disabled = false
+          });
+        },false);
+        
+        // preview function mousemove
+        img.addEventListener('mousemove', function(e){
+          // chrome
+          if(e.offsetX) {
+            x = e.offsetX;
+            y = e.offsetY;
+          }
+          // firefox
+          else if(e.layerX) {
+            x = e.layerX;
+            y = e.layerY;
+          }
+        
+          useCanvas(canvas,img,function(){
+        
+            // get image data
+            var p = canvas.getContext('2d')
+            .getImageData(x, y, 1, 1).data;
+            // show preview color
+            preview.style.background = rgbToHex(p[0],p[1],p[2]);
+          });
+        },false);
+        
+        
+        // canvas function
+        function useCanvas(el,image,callback){
+          el.width = image.width; // img width
+          el.height = image.height; // img height
+          // draw image in canvas tag
+          el.getContext('2d')
+          .drawImage(image, 0, 0, image.width, image.height);
+          return callback();
+        }
+        // short querySelector
+        function _(el){
+          return document.querySelector(el);
+        }
+        
+        // convert rgba to hex
+        // http://stackoverflow.com/questions/5623838/rgb-to-hex-and-hex-to-rgb
+        function componentToHex(c) {
+          var hex = c.toString(16);
+          return hex.length == 1 ? "0" + hex : hex;
+        }
+        function rgbToHex(r, g, b) {
+          return "#" + componentToHex(r) + componentToHex(g) + componentToHex(b);
+        }
+        
+        function findPos(obj) {
+            var curleft = 0, curtop = 0;
+            if (obj.offsetParent) {
+                do {
+                    curleft += obj.offsetLeft;
+                    curtop += obj.offsetTop;
+                } while (obj = obj.offsetParent);
+                return { x: curleft, y: curtop };
+            }
+            return undefined;
+        }
+        </script>
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        
+          ga('create', 'UA-46156385-1', 'cssscript.com');
+          ga('send', 'pageview');
     </script>
 <style>
     .mobile-bottom-nav {
@@ -152,7 +266,62 @@ footer span {
     font-size: 0.8rem;
     display: none;
 }
-
+.thumbnail{
+  position:relative;
+  display: block;
+  width: 90%;
+  overflow:hidden;
+  margin: 0 auto;
+  margin-top: 60px;
+}
+.thumbnail img {
+  display: block;
+  width: 100%;
+  cursor: crosshair;
+  border: 5px solid #fff;
+  margin: 0 auto;
+}
+.result{
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #000;
+  background: rgba(0, 0, 0, 0.2);
+  color: #fff;
+  margin: 0;
+  padding: 10px 15px;
+  display: block;
+}
+.result span {
+  display: block;
+  font-size: 13px;
+}
+.preview{
+  position:absolute;
+  top:5px;
+  right:5px;
+  display:block;
+  margin:0;
+  padding:0;
+  width:50px;
+  height:50px;
+  border: 5px solid #FFF;
+  border-right: none;
+  border-top: none;
+}
+#cs{
+  display:none;
+}
+@media (min-width:768px){
+  .thumbnail{
+    width:85%;
+  }
+}
+@media (min-width:1024px){
+  .thumbnail{
+    width:55%;
+  }
+}
 </style>
 
 {% endblock %}
